Added Modal form while dragging

--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,28 +1,35 @@
-.main-context{
-    display: grid;
-    grid-template-columns: 15% 85%;
-    gap: 20px;
+.main-context {
+  display: grid;
+  grid-template-columns: 15% 80%;
+  gap: 20px;
 }
 
-.draggable-part{
-    background-color: #F4F4F7;
-    padding: 10px;
-    height: 100vh;
-    border-right: 1px solid rgb(0, 0, 0, 0.2);
+.draggable-part {
+  background-color: #f4f4f7;
+  padding: 10px;
+  height: 97vh;
+  border-right: 1px solid rgb(0, 0, 0, 0.2);
 }
-.droppable-part{
-    padding: 10px;
-    height: 100vh;
+.droppable-part {
+  padding: 10px;
 }
 
-.input__element{
-    display: flex;
-    gap: 20px;
-    background-color: #fff;
-    padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    cursor: pointer;
-    user-select: none;
-    margin: 10px;
+.input__element {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none;
+  margin: 10px;
+}
+
+.dragging {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.indicator {
+  background-color: rgb(92, 107, 192);
 }
