Field informations in modal finished

--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -33,3 +33,11 @@
 .indicator {
   background-color: rgb(92, 107, 192);
 }
+
+.input__box {
+  margin: 10px 0;
+}
+
+.margin-10 {
+  margin: 10px 0;
+}
