--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -66,7 +66,22 @@
   font-weight: 500;
 }
 
+.edit-btn {
+  opacity: 0;
+  display: flex;
+  background-color: transparent;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 20px;
+}
+
 .output__element:hover .delete-btn {
+  opacity: 1;
+}
+
+.output__element:hover .edit-btn {
   opacity: 1;
 }
 
@@ -74,4 +89,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.select {
+  width: 95%;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
 }
