--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -45,10 +45,11 @@
 
 .output__element {
   padding: 20px;
-  border: 1px solid #f4f4f7;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   border-left: 5px solid #757ce8;
   border-radius: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 0 20px;
 }
 
 .output_text {
@@ -121,4 +122,8 @@ table th{
   background-color: black;
   color: white;
   border: 1px solid white;
+}
+
+.zero{
+  margin: 0;
 }
